default/objects/NVMContactWorld__Field_Based_CLID_Mapping__c/NVMContactWorld__Field_Based_CLID_Mapping__c.object-meta.xml
<CustomObject>
    <label>Field-Based Callback Number Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field-Based Callback Number Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>