default/objects/NVMContactWorld__Field_Based_CLID_Mapping__c/fields/NVMContactWorld__Call_Recording_Enabled__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Call_Recording_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Call Recording Enabled</label>
    <type>Checkbox</type>
</CustomField>