default/objects/NVMContactWorld__Field_Based_CLID_Mapping__c/fields/NVMContactWorld__Field__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>