default/objects/NVMContactWorld__Field_Based_CLID_Mapping__c/fields/NVMContactWorld__Presented_CLID__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Presented_CLID__c</fullName>
    <label>Presented Callback Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>