default/objects/NVMContactWorld__Field_Based_CLID_Mapping__c/fields/NVMContactWorld__Value__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>