default/objects/NVMContactWorld__Field_Based_CLID_Mapping__c/listViews/NVMContactWorld__Field_Based_Callback_Mappings.listView-meta.xml
<ListView>
    <fullName>NVMContactWorld__Field_Based_Callback_Mappings</fullName>
    <columns>NAME</columns>
    <columns>NVMContactWorld__Object__c</columns>
    <columns>NVMContactWorld__Field__c</columns>
    <columns>NVMContactWorld__Value__c</columns>
    <columns>NVMContactWorld__Presented_CLID__c</columns>
    <columns>NVMContactWorld__Call_Recording_Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>Field-Based Callback Number Mappings</label>
</ListView>